--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,13 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~bootstrap/scss/bootstrap";
 
-
 body {
-  background-color: antiquewhite;
+  background-image: url("https://tenor.com/view/naruto-background-gif-22238980");
+  background-color: black;
+  // background-repeat: no-repeat;
+  // background-position: 0 0;
+  // height:400px;
+  // width:350px;
   color: brown;
   text-align: center;
   margin-top: 100px;
